--- a/styles/all-menu.module.scss
+++ b/styles/all-menu.module.scss
@@ -1,116 +1,13 @@
-@mixin parts {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+// @mixin parts {
 
-  .titleSection {
-    border: 5px solid black;
-    background-color: black;
-    color: white;
-    padding: 1rem;
-    width: 100%;
-    h1 {
-      margin: 0;
-    }
-  }
+// }
 
-  .menuSection {
-    width: 100%;
-    height: 100%;
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-
-    .menuItem {
-      // border: 3px solid black;
-      box-shadow: 5px 5px 10px gray;
-      box-sizing: content-box;
-      border-radius: 5px;
-      width: calc(33% - 4rem);
-      height: 500px;
-      margin: 1rem;
-
-      display: grid;
-      grid-template:
-        "about" 200px
-        "image" 200px
-        "button" 100px;
-
-      .aboutBox {
-        grid-area: about;
-        width: 100%;
-        // border-bottom: 1px solid black;
-
-        .title {
-          width: 100%;
-          height: 60px;
-          font-size: 18px;
-          padding: 0.5rem;
-          font-weight: bold;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        }
-
-        .price {
-          width: 100%;
-          height: 30px;
-          font-size: 15px;
-          padding: 0.5rem;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        }
-
-        .product {
-          height: 110px;
-          font-size: 15px;
-          margin: 0;
-          padding: 0.5rem;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        }
-      }
-
-      .imageBox {
-        grid-area: image;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        .image {
-          object-fit: contain;
-        }
-      }
-
-      .buttonBox {
-        grid-area: button;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        a {
-          padding: 1rem 2rem;
-          border: 1px solid black;
-          border-radius: 5px;
-          margin: 0.5rem;
-
-          &:hover {
-            color: white;
-            background-color: black;
-          }
-        }
-      }
-    }
-  }
-}
+// 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
 
 .body {
+  // border: 5px solid red;
+  position: relative;
+  top: 130px;
   width: 100%;
   min-height: 100vh;
   display: grid;
@@ -128,6 +25,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(187, 187, 187);
+
     h1 {
       margin: 0;
     }
@@ -135,42 +33,200 @@
 
   .barrel {
     grid-area: barrel;
-    @include parts;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .titleSection {
+      border: 5px solid black;
+      background-color: black;
+      color: white;
+      padding: 1rem;
+      width: 100%;
+      h1 {
+        margin: 0;
+      }
+    }
+
+    .menuSection {
+      // border: 5px solid red;
+      width: 100%;
+      height: 100%;
+      padding: 1rem;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+
+      .menuItem {
+        // border: 5px solid red;
+        box-shadow: 5px 5px 10px gray;
+        box-sizing: content-box;
+        border-radius: 5px;
+        width: calc(33% - 32px);
+        // width: calc(33% - 42px);
+        height: 440px;
+        margin: 1rem;
+        display: grid;
+        grid-template:
+          "about" 180px
+          "image" 180px
+          // "image" 200px
+          "button" 80px;
+
+        .aboutBox {
+          border: 1px solid blue;
+          grid-area: about;
+          width: 100%;
+          // border-bottom: 1px solid black;
+
+          .title {
+            width: 100%;
+            height: 60px;
+            font-size: 18px;
+            padding: 0.5rem;
+            font-weight: bold;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+
+          .price {
+            width: 100%;
+            height: 20px;
+            // height: 30px;
+            font-size: 15px;
+            // padding: 0.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+
+          .product {
+            height: 100px;
+            // height: 110px;
+            font-size: 15px;
+            margin: 0;
+            // padding: 0.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+        }
+
+        .imageBox {
+          border: 1px solid green;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          height: 100%;
+
+          .image {
+            border: 1px solid orange;
+            grid-area: image;
+            height: 180px;
+            width: 200px;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+        }
+        .buttonBox {
+          border: 1px solid magenta;
+          grid-area: button;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          a {
+            padding: 0.8rem 1.5rem;
+            // padding: 1rem 2rem;
+            border: 1px solid black;
+            border-radius: 5px;
+            margin: 0.5rem;
+            font-weight: bold;
+
+            &:hover {
+              color: white;
+              background-color: black;
+              transition: 300ms;
+            }
+          }
+        }
+      }
+    }
   }
 
-  .bottle {
-    grid-area: bottle;
-    @include parts;
-  }
+  // .bottle {
+  //   grid-area: bottle;
+  //   @include parts;
+  // }
 
-  .cocktail {
-    grid-area: cocktail;
-    @include parts;
+  // .cocktail {
+  //   grid-area: cocktail;
+  //   @include parts;
+  // }
+
+  footer {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(178 178 178);
+
+    p {
+      margin: 0;
+      color: white;
+    }
   }
 }
 
-@media screen and (min-width: 1170px) and (max-width: 1280px) {
+// @media screen and (max-width: 1170px) {
+//   .body {
+//     .barrel {
+//       .menuSection {
+//         .menuItem {
+//           .aboutBox {
+//             .title {
+//               font-size: 16px;
+//               // font-size: 18px;
+//             }
+//             .price {
+//               font-size: 14px;
+//               // font-size: 15px;
+//             }
+//             .product {
+//               font-size: 14px;
+//               // font-size: 15px;
+//             }
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
+
+@media screen and (max-width: 1155px) {
   .body {
-    .barrel,
-    .bottle,
-    .cocktail {
+    .barrel {
       .menuSection {
         .menuItem {
           .aboutBox {
-            .titleBox {
-              .title {
-                font-size: 16px;
-              }
+            .title {
+              font-size: 15px;
+              // font-size: 18px;
             }
-
-            .sentenceBox {
-              .price {
-                font-size: 13px;
-              }
-
-              .product {
-                font-size: 13px;
-              }
+            .price {
+              font-size: 13px;
+              // font-size: 15px;
+            }
+            .product {
+              font-size: 13px;
+              // font-size: 15px;
             }
           }
         }
@@ -179,95 +235,28 @@
   }
 }
 
-@media screen and (max-width: 1170px) {
+//  🔥ここから2列に変更
+
+@media screen and (max-width: 1000px) {
   .body {
-    .barrel,
-    .bottle,
-    .cocktail {
+    .barrel {
       .menuSection {
+        background-color: pink;
         .menuItem {
-          width: calc(50% - 4rem);
+          width: calc(50% - 32px);
 
           .aboutBox {
-            .titleBox {
-              .title {
-                font-size: 18px;
-              }
+            .title {
+              font-size: 17px;
+              // font-size: 15px;
             }
-
-            .sentenceBox {
-              .price {
-                font-size: 15px;
-              }
-
-              .product {
-                font-size: 15px;
-              }
+            .price {
+              font-size: 14px;
+              // font-size: 13px;
             }
-          }
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 900px) {
-  // @media screen and (max-width: 1024px) {
-  .body {
-    .barrel,
-    .bottle,
-    .cocktail {
-      .menuSection {
-        .menuItem {
-          width: calc(50% - 4rem);
-
-          .aboutBox {
-            .titleBox {
-              .title {
-                font-size: 16px;
-              }
-            }
-
-            .sentenceBox {
-              .price {
-                font-size: 13px;
-              }
-
-              .product {
-                font-size: 13px;
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 830px) {
-  .body {
-    .barrel,
-    .bottle,
-    .cocktail {
-      .menuSection {
-        .menuItem {
-          width: calc(50% - 4rem);
-
-          .aboutBox {
-            .titleBox {
-              .title {
-                font-size: 15px;
-              }
-            }
-
-            .sentenceBox {
-              .price {
-                font-size: 12px;
-              }
-
-              .product {
-                font-size: 12px;
-              }
+            .product {
+              font-size: 14px;
+              // font-size: 13px;
             }
           }
         }
@@ -278,45 +267,30 @@
 
 @media screen and (max-width: 768px) {
   .body {
-    .barrel,
-    .bottle,
-    .cocktail {
+    .barrel {
       .menuSection {
+        background-color: skyblue;
+        padding: 1rem;
+        // padding: 1rem 0.5rem;
+
         .menuItem {
-          width: 500px;
-          height: 430px;
-          display: grid;
-          grid-template:
-            "about" 160px
-            "image" 200px
-            "button" 70px;
+          width: calc(50% - 32px);
 
           .aboutBox {
-            background-color: white;
-
-            .titleBox {
-              .title {
-                font-size: 18px;
-                height: 50px;
-              }
+            .title {
+              font-size: 14px;
             }
-
-            .sentenceBox {
-              .price {
-                font-size: 14px;
-                height: 30px;
-              }
-
-              .product {
-                font-size: 14px;
-                height: 80px;
-              }
+            .price {
+              font-size: 12px;
+            }
+            .product {
+              font-size: 12px;
             }
           }
 
           .buttonBox {
             a {
-              padding: 0.5rem 1rem;
+              padding: 0.5rem 1.2rem;
             }
           }
         }
@@ -325,45 +299,25 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
   .body {
-    .barrel,
-    .bottle,
-    .cocktail {
+    .barrel {
       .menuSection {
+        background-color: greenyellow;
+
         .menuItem {
-          width: 400px;
-          height: 430px;
-          display: grid;
-          grid-template:
-            "about" 160px
-            "image" 200px
-            "button" 70px;
+          width: 75%;
 
           .aboutBox {
-            .titleBox {
-              .title {
-                font-size: 18px;
-                height: 50px;
-              }
+            .title {
+              font-size: 18px;
+              padding: 0.3rem;
             }
-
-            .sentenceBox {
-              .price {
-                font-size: 14px;
-                height: 30px;
-              }
-
-              .product {
-                font-size: 14px;
-                height: 80px;
-              }
+            .price {
+              font-size: 15px;
             }
-          }
-
-          .buttonBox {
-            a {
-              padding: 0.5rem 1rem;
+            .product {
+              font-size: 15px;
             }
           }
         }
@@ -374,36 +328,53 @@
 
 @media screen and (max-width: 480px) {
   .body {
-    .barrel,
-    .bottle,
-    .cocktail {
+    top: 100px;
+    .barrel {
       .menuSection {
+        background-color: orange;
+
         .menuItem {
-          width: 300px;
+          width: 75%;
 
           .aboutBox {
-            .titleBox {
-              .title {
-                font-size: 15px;
-                height: 50px;
-              }
+            .title {
+              font-size: 16px;
+              padding: 0.3rem;
             }
-
-            .sentenceBox {
-              .price {
-                font-size: 11px;
-                height: 30px;
-              }
-
-              .product {
-                font-size: 11px;
-                height: 80px;
-              }
+            .price {
+              font-size: 14px;
+            }
+            .product {
+              font-size: 14px;
             }
           }
-          .buttonBox {
-            a {
-              font-size: 10px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .body {
+    top: 100px;
+    .barrel {
+      .menuSection {
+        background-color: white;
+        // background-color: orange;
+
+        .menuItem {
+          width: 75%;
+
+          .aboutBox {
+            .title {
+              font-size: 14px;
+              padding: 0.3rem;
+            }
+            .price {
+              font-size: 13px;
+            }
+            .product {
+              font-size: 13px;
             }
           }
         }
