--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -1,4 +1,5 @@
 .body {
+  // background-color: red;
   background-color: black;
   width: 100%;
   height: 130px;
@@ -11,6 +12,7 @@
 
   .section {
     height: 130px;
+    // background-color: red;
     background-color: black;
     max-width: 1240px;
     margin: auto;
@@ -182,11 +184,13 @@
 @media screen and (max-width: 480px) {
   .body {
     height: 100px;
+    // height: 100px;
 
     transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
     transition-duration: 0ms;
 
     .section {
+      // height: 120px;
       height: 100px;
       h1 {
         font-size: 28px;
