--- a/components/Header/hederAnother.module.scss
+++ b/components/Header/hederAnother.module.scss
@@ -1,5 +1,5 @@
 .body {
-  // border: 3px solid red;
+  // background-color: blue;
   background-color: black;
   width: 100%;
   height: 130px;
@@ -11,8 +11,8 @@
   transition-duration: 300ms;
 
   .section {
-    // border: 3px solid blue;
     height: 130px;
+    // background-color: blue;
     background-color: black;
     max-width: 1240px;
     margin: auto;
