--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -16,6 +16,8 @@
 .body {
   width: 100%;
   min-height: 100vh;
+  position: relative;
+  top: 130px;
 
   .headerSection {
     width: 100%;
@@ -168,6 +170,19 @@
           }
         }
       }
+    }
+  }
+  footer {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(178 178 178);
+    
+    p {
+      margin: 0;
+      color: white;
     }
   }
 }
@@ -339,6 +354,9 @@
   }
 
   .body {
+    position: relative;
+    top: 100px;
+
     .headerSection {
       height: 250px;
     }
