--- a/styles/all-menu.module.css
+++ b/styles/all-menu.module.css
@@ -1,4 +1,6 @@
 .body {
+  position: relative;
+  top: 130px;
   width: 100%;
   min-height: 100vh;
   display: grid;
@@ -44,13 +46,14 @@
   box-shadow: 5px 5px 10px gray;
   box-sizing: content-box;
   border-radius: 5px;
-  width: calc(33% - 4rem);
-  height: 500px;
+  width: calc(33% - 32px);
+  height: 440px;
   margin: 1rem;
   display: grid;
-  grid-template: "about" 200px "image" 200px "button" 100px;
+  grid-template: "about" 180px "image" 180px "button" 80px;
 }
 .body .barrel .menuSection .menuItem .aboutBox {
+  border: 1px solid blue;
   grid-area: about;
   width: 100%;
 }
@@ -66,34 +69,40 @@
 }
 .body .barrel .menuSection .menuItem .aboutBox .price {
   width: 100%;
-  height: 30px;
+  height: 20px;
   font-size: 15px;
-  padding: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .body .barrel .menuSection .menuItem .aboutBox .product {
-  height: 110px;
+  height: 100px;
   font-size: 15px;
   margin: 0;
-  padding: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .body .barrel .menuSection .menuItem .imageBox {
-  grid-area: image;
+  border: 1px solid green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
+  height: 100%;
+}
+.body .barrel .menuSection .menuItem .imageBox .image {
+  border: 1px solid orange;
+  grid-area: image;
+  height: 180px;
+  width: 200px;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.body .barrel .menuSection .menuItem .imageBox .image {
-  -o-object-fit: contain;
-     object-fit: contain;
-}
 .body .barrel .menuSection .menuItem .buttonBox {
+  border: 1px solid magenta;
   grid-area: button;
   width: 100%;
   display: flex;
@@ -101,388 +110,137 @@
   align-items: center;
 }
 .body .barrel .menuSection .menuItem .buttonBox a {
-  padding: 1rem 2rem;
+  padding: 0.8rem 1.5rem;
   border: 1px solid black;
   border-radius: 5px;
   margin: 0.5rem;
+  font-weight: bold;
 }
 .body .barrel .menuSection .menuItem .buttonBox a:hover {
   color: white;
   background-color: black;
+  transition: 300ms;
 }
-.body .bottle {
-  grid-area: bottle;
+.body footer {
+  width: 100%;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  background-color: rgb(178, 178, 178);
 }
-.body .bottle .titleSection {
-  border: 5px solid black;
-  background-color: black;
-  color: white;
-  padding: 1rem;
-  width: 100%;
-}
-.body .bottle .titleSection h1 {
+.body footer p {
   margin: 0;
-}
-.body .bottle .menuSection {
-  width: 100%;
-  height: 100%;
-  padding: 1rem;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.body .bottle .menuSection .menuItem {
-  box-shadow: 5px 5px 10px gray;
-  box-sizing: content-box;
-  border-radius: 5px;
-  width: calc(33% - 4rem);
-  height: 500px;
-  margin: 1rem;
-  display: grid;
-  grid-template: "about" 200px "image" 200px "button" 100px;
-}
-.body .bottle .menuSection .menuItem .aboutBox {
-  grid-area: about;
-  width: 100%;
-}
-.body .bottle .menuSection .menuItem .aboutBox .title {
-  width: 100%;
-  height: 60px;
-  font-size: 18px;
-  padding: 0.5rem;
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.body .bottle .menuSection .menuItem .aboutBox .price {
-  width: 100%;
-  height: 30px;
-  font-size: 15px;
-  padding: 0.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.body .bottle .menuSection .menuItem .aboutBox .product {
-  height: 110px;
-  font-size: 15px;
-  margin: 0;
-  padding: 0.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.body .bottle .menuSection .menuItem .imageBox {
-  grid-area: image;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.body .bottle .menuSection .menuItem .imageBox .image {
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-.body .bottle .menuSection .menuItem .buttonBox {
-  grid-area: button;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.body .bottle .menuSection .menuItem .buttonBox a {
-  padding: 1rem 2rem;
-  border: 1px solid black;
-  border-radius: 5px;
-  margin: 0.5rem;
-}
-.body .bottle .menuSection .menuItem .buttonBox a:hover {
   color: white;
-  background-color: black;
-}
-.body .cocktail {
-  grid-area: cocktail;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.body .cocktail .titleSection {
-  border: 5px solid black;
-  background-color: black;
-  color: white;
-  padding: 1rem;
-  width: 100%;
-}
-.body .cocktail .titleSection h1 {
-  margin: 0;
-}
-.body .cocktail .menuSection {
-  width: 100%;
-  height: 100%;
-  padding: 1rem;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.body .cocktail .menuSection .menuItem {
-  box-shadow: 5px 5px 10px gray;
-  box-sizing: content-box;
-  border-radius: 5px;
-  width: calc(33% - 4rem);
-  height: 500px;
-  margin: 1rem;
-  display: grid;
-  grid-template: "about" 200px "image" 200px "button" 100px;
-}
-.body .cocktail .menuSection .menuItem .aboutBox {
-  grid-area: about;
-  width: 100%;
-}
-.body .cocktail .menuSection .menuItem .aboutBox .title {
-  width: 100%;
-  height: 60px;
-  font-size: 18px;
-  padding: 0.5rem;
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.body .cocktail .menuSection .menuItem .aboutBox .price {
-  width: 100%;
-  height: 30px;
-  font-size: 15px;
-  padding: 0.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.body .cocktail .menuSection .menuItem .aboutBox .product {
-  height: 110px;
-  font-size: 15px;
-  margin: 0;
-  padding: 0.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.body .cocktail .menuSection .menuItem .imageBox {
-  grid-area: image;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.body .cocktail .menuSection .menuItem .imageBox .image {
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-.body .cocktail .menuSection .menuItem .buttonBox {
-  grid-area: button;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.body .cocktail .menuSection .menuItem .buttonBox a {
-  padding: 1rem 2rem;
-  border: 1px solid black;
-  border-radius: 5px;
-  margin: 0.5rem;
-}
-.body .cocktail .menuSection .menuItem .buttonBox a:hover {
-  color: white;
-  background-color: black;
 }
 
-@media screen and (min-width: 1170px) and (max-width: 1280px) {
-  .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
-.body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
-.body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
-    font-size: 16px;
+@media screen and (max-width: 1155px) {
+  .body .barrel .menuSection .menuItem .aboutBox .title {
+    font-size: 15px;
   }
-  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
-.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
-.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
+  .body .barrel .menuSection .menuItem .aboutBox .price {
     font-size: 13px;
   }
-  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
-.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
-.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
+  .body .barrel .menuSection .menuItem .aboutBox .product {
     font-size: 13px;
   }
 }
-@media screen and (max-width: 1170px) {
-  .body .barrel .menuSection .menuItem,
-.body .bottle .menuSection .menuItem,
-.body .cocktail .menuSection .menuItem {
-    width: calc(50% - 4rem);
+@media screen and (max-width: 1000px) {
+  .body .barrel .menuSection {
+    background-color: pink;
   }
-  .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
-.body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
-.body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
-    font-size: 18px;
+  .body .barrel .menuSection .menuItem {
+    width: calc(50% - 32px);
   }
-  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
-.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
-.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
-    font-size: 15px;
+  .body .barrel .menuSection .menuItem .aboutBox .title {
+    font-size: 17px;
   }
-  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
-.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
-.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
-    font-size: 15px;
+  .body .barrel .menuSection .menuItem .aboutBox .price {
+    font-size: 14px;
   }
-}
-@media screen and (max-width: 900px) {
-  .body .barrel .menuSection .menuItem,
-.body .bottle .menuSection .menuItem,
-.body .cocktail .menuSection .menuItem {
-    width: calc(50% - 4rem);
-  }
-  .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
-.body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
-.body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
-    font-size: 16px;
-  }
-  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
-.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
-.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
-    font-size: 13px;
-  }
-  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
-.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
-.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
-    font-size: 13px;
-  }
-}
-@media screen and (max-width: 830px) {
-  .body .barrel .menuSection .menuItem,
-.body .bottle .menuSection .menuItem,
-.body .cocktail .menuSection .menuItem {
-    width: calc(50% - 4rem);
-  }
-  .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
-.body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
-.body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
-    font-size: 15px;
-  }
-  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
-.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
-.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
-    font-size: 12px;
-  }
-  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
-.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
-.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
-    font-size: 12px;
+  .body .barrel .menuSection .menuItem .aboutBox .product {
+    font-size: 14px;
   }
 }
 @media screen and (max-width: 768px) {
-  .body .barrel .menuSection .menuItem,
-.body .bottle .menuSection .menuItem,
-.body .cocktail .menuSection .menuItem {
-    width: 500px;
-    height: 430px;
-    display: grid;
-    grid-template: "about" 160px "image" 200px "button" 70px;
+  .body .barrel .menuSection {
+    background-color: skyblue;
+    padding: 1rem;
   }
-  .body .barrel .menuSection .menuItem .aboutBox,
-.body .bottle .menuSection .menuItem .aboutBox,
-.body .cocktail .menuSection .menuItem .aboutBox {
-    background-color: white;
+  .body .barrel .menuSection .menuItem {
+    width: calc(50% - 32px);
   }
-  .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
-.body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
-.body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
-    font-size: 18px;
-    height: 50px;
-  }
-  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
-.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
-.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
+  .body .barrel .menuSection .menuItem .aboutBox .title {
     font-size: 14px;
-    height: 30px;
   }
-  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
-.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
-.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
-    font-size: 14px;
-    height: 80px;
+  .body .barrel .menuSection .menuItem .aboutBox .price {
+    font-size: 12px;
   }
-  .body .barrel .menuSection .menuItem .buttonBox a,
-.body .bottle .menuSection .menuItem .buttonBox a,
-.body .cocktail .menuSection .menuItem .buttonBox a {
-    padding: 0.5rem 1rem;
+  .body .barrel .menuSection .menuItem .aboutBox .product {
+    font-size: 12px;
+  }
+  .body .barrel .menuSection .menuItem .buttonBox a {
+    padding: 0.5rem 1.2rem;
   }
 }
-@media screen and (max-width: 600px) {
-  .body .barrel .menuSection .menuItem,
-.body .bottle .menuSection .menuItem,
-.body .cocktail .menuSection .menuItem {
-    width: 400px;
-    height: 430px;
-    display: grid;
-    grid-template: "about" 160px "image" 200px "button" 70px;
+@media screen and (max-width: 650px) {
+  .body .barrel .menuSection {
+    background-color: greenyellow;
   }
-  .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
-.body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
-.body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
+  .body .barrel .menuSection .menuItem {
+    width: 75%;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .title {
     font-size: 18px;
-    height: 50px;
+    padding: 0.3rem;
   }
-  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
-.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
-.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
-    font-size: 14px;
-    height: 30px;
+  .body .barrel .menuSection .menuItem .aboutBox .price {
+    font-size: 15px;
   }
-  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
-.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
-.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
-    font-size: 14px;
-    height: 80px;
-  }
-  .body .barrel .menuSection .menuItem .buttonBox a,
-.body .bottle .menuSection .menuItem .buttonBox a,
-.body .cocktail .menuSection .menuItem .buttonBox a {
-    padding: 0.5rem 1rem;
+  .body .barrel .menuSection .menuItem .aboutBox .product {
+    font-size: 15px;
   }
 }
 @media screen and (max-width: 480px) {
-  .body .barrel .menuSection .menuItem,
-.body .bottle .menuSection .menuItem,
-.body .cocktail .menuSection .menuItem {
-    width: 300px;
+  .body {
+    top: 100px;
   }
-  .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
-.body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
-.body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
-    font-size: 15px;
-    height: 50px;
+  .body .barrel .menuSection {
+    background-color: orange;
   }
-  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
-.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
-.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
-    font-size: 11px;
-    height: 30px;
+  .body .barrel .menuSection .menuItem {
+    width: 75%;
   }
-  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
-.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
-.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
-    font-size: 11px;
-    height: 80px;
+  .body .barrel .menuSection .menuItem .aboutBox .title {
+    font-size: 16px;
+    padding: 0.3rem;
   }
-  .body .barrel .menuSection .menuItem .buttonBox a,
-.body .bottle .menuSection .menuItem .buttonBox a,
-.body .cocktail .menuSection .menuItem .buttonBox a {
-    font-size: 10px;
+  .body .barrel .menuSection .menuItem .aboutBox .price {
+    font-size: 14px;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .product {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 390px) {
+  .body {
+    top: 100px;
+  }
+  .body .barrel .menuSection {
+    background-color: white;
+  }
+  .body .barrel .menuSection .menuItem {
+    width: 75%;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .title {
+    font-size: 14px;
+    padding: 0.3rem;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .price {
+    font-size: 13px;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .product {
+    font-size: 13px;
   }
 }
 /*# sourceMappingURL=all-menu.module.css.map */
