--- a/styles/all-menu.module.scss
+++ b/styles/all-menu.module.scss
@@ -75,7 +75,7 @@
           "button" 80px;
 
         .aboutBox {
-          border: 1px solid blue;
+          // border: 1px solid blue;
           grid-area: about;
           width: 100%;
           // border-bottom: 1px solid black;
@@ -115,7 +115,7 @@
         }
 
         .imageBox {
-          border: 1px solid green;
+          // border: 1px solid green;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -123,7 +123,7 @@
           height: 100%;
 
           .image {
-            border: 1px solid orange;
+            // border: 1px solid orange;
             grid-area: image;
             height: 180px;
             width: 200px;
@@ -134,7 +134,7 @@
           }
         }
         .buttonBox {
-          border: 1px solid magenta;
+          // border: 1px solid magenta;
           grid-area: button;
           width: 100%;
           display: flex;
@@ -363,11 +363,13 @@
         // background-color: orange;
 
         .menuItem {
-          width: 75%;
+          width: 85%;
 
           .aboutBox {
             .title {
-              font-size: 14px;
+              font-size: 16px;
+              // デプロイしたのは14px
+              // font-size: 14px;
               padding: 0.3rem;
             }
             .price {
